[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_package"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "graphviz",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "black",
    "pytest>=9.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

mypy_path = "src"

[[tool.mypy.overrides]]
module = "graphviz.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
addopts = "-ra -q"
testpaths = [
    "test",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"